<resources>
    <string name="app_name">Compare3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="family_tree">My family tree</string>
    <string name="similarity"> Me and my family latest similarity</string>
    <string name="date"> Date:  </string>
    <string name="result"> Result:  </string>


    <!--New Member Activity -->
    <string name="add_new_member"> Add new family member …</string>
    <string name="import_from_gallery">Import from gallery *</string>
    <string name="name">Name *</string>
    <string name="surname">Surname</string>
    <string name="birth">Date of birth *</string>
    <string name="father">Father **</string>
    <string name="mother">Mother **</string>
    <string name="married_to">Married to **</string>
    <string name="Connections">Family connections</string>
    <string name="save">save</string>
    <string name="info_TODELETE">*necessary &#xA;&#xD;**min one of them need to be selected</string>
    <string name="info">*necessary</string>
    <string name="info_2">**min one of them need to be selected</string>
    <string name="man">M</string>
    <string name="female">F</string>
    <string name="sex">Sex *</string>



    <!--New Compare Activity -->
    <string name="new_compare">New Compare …</string>
    <string name="check_similarity">Check similarity</string>
    <string name="result_textView">Result :</string>
    <string name="btn_repeat">Repeat</string>
    <string name="btn_accept">Accept</string>


</resources>
