<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".newCompare.NewCompareActivity">


    <TextView
        android:id="@+id/text_title_new2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_compare"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Person1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0"
        android:text="Person 1"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_new2" />

    <ImageButton
        android:id="@+id/btnPerson2_Gallery"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_gallery"
        android:onClick="onClickButton"
        android:src="@drawable/ic_photo_library_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewPerson2"
        app:layout_constraintStart_toEndOf="@+id/imgViewPerson2"
        app:layout_constraintTop_toTopOf="@+id/imgViewPerson2" />

    <TextView
        android:id="@+id/textView_Person2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0"
        android:text="Person 2"
        android:textColor="@android:color/background_light"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewPerson1" />

    <ImageButton
        android:id="@+id/btnPerson1_Camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_gallery"
        android:onClick="onClickButton"
        android:src="@drawable/ic_camera_enhance_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewPerson1"
        app:layout_constraintStart_toEndOf="@+id/btnPerson1_Gallery"
        app:layout_constraintTop_toTopOf="@+id/imgViewPerson1" />

    <ImageView
        android:id="@+id/imgViewPerson1"
        android:layout_width="210dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Person1"
        app:srcCompat="@drawable/ic_accessibility_black_24dp" />

    <ImageView
        android:id="@+id/imgViewPerson2"
        android:layout_width="210dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Person2"
        app:srcCompat="@drawable/ic_accessibility_black_24dp" />

    <ImageButton
        android:id="@+id/btnPerson2_Camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_gallery"
        android:onClick="onClickButton"
        android:src="@drawable/ic_camera_enhance_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewPerson2"
        app:layout_constraintStart_toEndOf="@+id/btnPerson2_Gallery"
        app:layout_constraintTop_toTopOf="@+id/imgViewPerson2" />

    <ImageButton
        android:id="@+id/btnPerson1_Gallery"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_gallery"
        android:onClick="onClickButton"
        android:src="@drawable/ic_photo_library_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewPerson1"
        app:layout_constraintStart_toEndOf="@+id/imgViewPerson1"
        app:layout_constraintTop_toTopOf="@+id/imgViewPerson1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/check_card"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:visibility="visible"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewPerson2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="82dp"
                android:layout_height="63dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toStartOf="@+id/btnstarCompare"
                app:layout_constraintTop_toBottomOf="@+id/textView_CheckSimilarity"
                app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

            <TextView
                android:id="@+id/textView_CheckSimilarity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/check_similarity"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnstarCompare"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="127dp"
                android:layout_height="63dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/rounded_edge"
                android:onClick="onClickButton"
                android:text="start Compare"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_CheckSimilarity" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/result_card"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:visibility="gone"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_Accept"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="127dp"
                android:layout_height="63dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_edge"
                android:onClick="onClickButton"
                android:text="@string/btn_accept"
                android:textColor="@android:color/background_light"
                app:layout_constraintStart_toEndOf="@+id/btn_Repeat"
                app:layout_constraintTop_toBottomOf="@+id/textView_result" />

            <Button
                android:id="@+id/btn_Repeat"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="127dp"
                android:layout_height="63dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_edge"
                android:onClick="onClickButton"
                android:text="@string/btn_repeat"
                android:textColor="@android:color/background_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_result" />

            <TextView
                android:id="@+id/textView_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0"
                android:text="@string/result_textView"
                android:textColor="@android:color/background_light"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:textColor="@android:color/background_light"
                android:textSize="40sp"
                app:layout_constraintStart_toEndOf="@+id/textView_result"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>